--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,11 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+*.csv
+*.txt
+data_cache/
+logs/
+backtest_results/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
